# text-utils

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/app/: mod.rs  runner.rs  training.rs  utils.rs
src/cli/: args.rs  mod.rs
src/config/: mod.rs  scraper_config.rs
src/model/: generator.rs  mod.rs  ngram.rs  trainer.rs
src/output/: insights.rs  mod.rs  wordcloud.rs
src/scrapers/: config.rs  http.rs  mod.rs  registry.rs  scraper_trait.rs
src/scrapers/providers/: basic.rs  lyrics.rs  mod.rs  wikipedia.rs
src/text/: mod.rs  processing.rs
tests/: config_test.rs  error_test.rs  http_client_test.rs  integration_test.rs  mock_scraper_test.rs  scrapers_test.rs  text_processing_test.rs
