[package]
name = "text-gen-ngram"
version = "1.0.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
reqwest = { version = "0.12.13", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"
log = "0.4.26"
env_logger = "0.11.7"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "io-util", "fs", "time", "signal"] }
async-trait = "0.1.87"
futures = "0.3.31"
scraper = "0.23.1"
once_cell = "1.21.0"
clap = { version = "4.5.32", features = ["derive"] }
chrono = "0.4.40"
regex = "1.11.1"
thiserror = "2.0.12"
urlencoding = "2.1.3"
wordcloud-rs = "0.1.5"
lazy_static = "1.4.0"